# codon-optimization

./: README.md  pyproject.toml  requirements.txt  rnn_predict.py  sequence.txt  sequence_opt.txt
data/: sequence_original.txt
src/codon_optimization/: __init__.py  rnn_evaluate.py  rnn_predict.py  rnn_train.py
