[project]
name = "codon-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "deepthought", email = "deepthough@postech.ac.kr" }
]
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.85",
    "click>=8.2.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "tensorflow>=2.19.0",
]

[project.scripts]
codon-optimization = "codon_optimization.rnn_predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
